2021-09-03  Kate Cheney  <katherine_cheney@apple.com>

        Safari’s Privacy Report window is completely blank
        https://bugs.webkit.org/show_bug.cgi?id=229847
        <rdar://problem/80974688>

        Reviewed by Chris Dumez.

        * TestWebKitAPI/Tests/WebKitCocoa/ResourceLoadStatistics.mm:
        (TEST):

2021-09-03  Devin Rousso  <drousso@apple.com>

        [Web App Manifest] Always fetch the first manifest if provided
        https://bugs.webkit.org/show_bug.cgi?id=229059
        <rdar://problem/82148333>

        Reviewed by Brent Fulgham.

        * TestWebKitAPI/Tests/WebKitCocoa/ApplicationManifest.mm:
        (TestWebKitAPI::TEST.ApplicationManifest.AlwaysFetch): Added.
        (TestWebKitAPI::TEST.ApplicationManifest.OnlyFirstManifest): Added.
        (TestWebKitAPI::TEST.ApplicationManifest.NoManifest): Added.
        (TestWebKitAPI::TEST.ApplicationManifest.MediaAttriute): Added.
        (TestWebKitAPI::TEST.ApplicationManifest.DoesNotExist): Added.
        (TestWebKitAPI::TEST.ApplicationManifest.Blocked): Added.

2021-09-03  Chris Dumez  <cdumez@apple.com>

        Allow layout tests to open popups by default
        https://bugs.webkit.org/show_bug.cgi?id=229881

        Reviewed by Darin Adler.

        Allow layout tests to open popups by default and drop testRunner.setCanOpenWindow().

        * DumpRenderTree/TestRunner.cpp:
        (TestRunner::staticFunctions):
        * DumpRenderTree/TestRunner.h:
        (TestRunner::setCallCloseOnWebViews):
        * DumpRenderTree/mac/UIDelegate.mm:
        (-[UIDelegate webView:createWebViewWithRequest:]):
        * DumpRenderTree/win/UIDelegate.cpp:
        (UIDelegate::createWebViewWithRequest):
        * WebKitTestRunner/InjectedBundle/Bindings/TestRunner.idl:
        * WebKitTestRunner/InjectedBundle/TestRunner.cpp:
        * WebKitTestRunner/InjectedBundle/TestRunner.h:
        (WTR::TestRunner::setAcceptsEditing):
        * WebKitTestRunner/TestController.cpp: