@@ -1,3 +1,14 @@
+2021-09-03  Aakash Jain  <aakash_jain@apple.com>
+
+        [ews] Invoke validate-changelog with python 3
+        https://bugs.webkit.org/show_bug.cgi?id=229872
+
+        Reviewed by Jonathan Bedard.
+
+        * CISupport/ews-build/steps.py:
+        (ValidateChangeLogAndReviewer):
+        * CISupport/ews-build/steps_unittest.py: Added unit-tests.
+
 2021-09-03  Kate Cheney  <katherine_cheney@apple.com>
 
         Safari’s Privacy Report window is completely blank
